[BZ1117862] Support the -secmgr option for enabling the security manager in jboss-modules